--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,6 +7,7 @@ on:
     branches: [ develop ]
   schedule:
     - cron: '40 22 * * 0'
+  # TODO : remove workflow_dispatch
   workflow_dispatch:
 
 jobs:
